tests/parser/should_fail/T18251c.hs
{-# LANGUAGE Haskell2010 #-}
module T18251c where

f = id @Int
