tests/parser/should_fail/T18251c.stderr

T18251c.hs:4:5: error: [GHC-23482]
    Illegal visible type application: @Int
    Suggested fix:
      Perhaps you intended to use the ‘TypeApplications’ extension
